--- a/blogg/templates/blogg/post/detail.html
+++ b/blogg/templates/blogg/post/detail.html
@@ -6,4 +6,40 @@
     Published {{ post.publish }} by {{ post.author }}
   </p>
   {{ post.body|linebreaks }}
+
+
+  <p>
+    <a href="{% url 'blogg:post_share' post.id %}">Share this Post</a>
+  </p>
+
+  {% with comments.count as total_comments %}
+  <h2>
+    {{ total_comments }} comment{{ total_comments|pluralize }}
+  </h2>
+{% endwith %}
+
+{% for comment in comments %}
+  <div class="comment">
+    <p class="info">
+      Comment {{ forloop.counter }} by {{ comment.name }}
+      {{ comment.created }}
+    </p>
+    {{ comment.body|linebreaks }}
+  </div>
+{% empty %}
+  <p>There are no comments yet.</p>
+{% endfor %}
+
+{% if new_comment %}
+<h2>Your Comment Has been Added</h2>
+{% else %}
+<form method="POST">
+  {{ comment_form.as_p }}
+  {% csrf_token %}
+  <p>
+    <input type="submit" value="add Comment" />
+  </p>
+</form>
+{% endif %}
+
 {% endblock %}
