--- a/blogg/templates/blogg/post/list.html
+++ b/blogg/templates/blogg/post/list.html
@@ -1,11 +1,25 @@
 {% extends "blogg/base.html" %}
 {% block title %}My Blog{% endblock %}
 {% block content %}
+
+
   <h1>My Blog</h1>
+  {% if tag %}
+  <h2>Posts tagged with "{{ tag.name }}"</h2>
+{% endif %}
   {% for post in posts %}
+
     <h2>
       <a href="{{ post.get_absolute_url }}">
         {{ post.title }}
+        <p class="tags">
+          Tags:
+          {% for tag in post.tags.all %}
+          <a href="{% url 'blogg:post_list_tag' tag.slug %}">{{tag.name}}</a>
+          {% if not forloop.last %}, {% endif %}
+          {% endfor %}
+        </p>
+
       </a>
     </h2>
     <p class="date">
