--- a/blogg/templates/blogg/base.html
+++ b/blogg/templates/blogg/base.html
@@ -1,3 +1,4 @@
+{% load blogg_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -13,6 +14,9 @@
   
   <div id="sidebar">
     <h2>My blog</h2>
+     <p>This Is My Fucking Blog. i've written {% total_post %} posts so far </p>
+     <h3>Latest Posts</h3>
+     {% show_latest_posts 3 %}
     <p>This is my blog.</p>
   </div>
 </body>
