--- a/blogg/templates/blogg/base.html
+++ b/blogg/templates/blogg/base.html
@@ -17,6 +17,7 @@
      <p>This Is My Fucking Blog. i've written {% total_post %} posts so far </p>
      <h3>Latest Posts</h3>
      {% show_latest_posts 3 %}
+     {% get_most_comments_post 3 %}
     <p>This is my blog.</p>
   </div>
 </body>
