--- a/blogg/templates/blogg/base.html
+++ b/blogg/templates/blogg/base.html
@@ -19,6 +19,9 @@
      {% show_latest_posts 3 %}
      {% get_most_comments_post 3 %}
     <p>This is my blog.</p>
+    <p>
+      <a href="{% url "blogg:post_feed" %}">Subscribe to my RSS feed</a>
+    </p>
   </div>
 </body>
 </html>
